--- a/templates/testcase_manage/index.html
+++ b/templates/testcase_manage/index.html
@@ -11,7 +11,7 @@
     <script type="text/javascript" src="https://www.huangwx.cn/js/sweetalert-dev.js"></script>
 	<meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
     {# 网页标题内容块 #}
-	<title>{% block title %}{% endblock title %}</title>
+	<title>测试用例配置</title>
 	<!-- <link rel="stylesheet" type="text/css" href="{% static 'css/reset.css' %}">
 	<link rel="stylesheet" type="text/css" href="{% static 'css/main.css' %}"> -->
 	{# 网页顶部引入文件块 #}
